<resources>
    <string name="app_name" translatable="false">QAcadêmico</string>
    <string name="app_q">2018 QAcadêmico Mobile</string>
    <string name="app_version">Versão</string>
    <string name="app_tinf">Um Projeto TINF</string>
    <string name="app_more">Mais</string>
    <string name="title_activity_about">Sobre</string>
    <string name="title_activity_more">Mais</string>
    <string name="title_home">Início</string>
    <string name="title_materiais">Materiais</string>
    <string name="title_calendario">Calendário</string>
    <string name="title_documentos">Documentos</string>
    <string name="title_diarios">Diários</string>
    <string name="title_boletim">Boletim</string>
    <string name="title_horario">Horário</string>
    <string name="title_graficos">Gráficos</string>
    <string name="title_activity_login">Login</string>
    <string name="title_other">Outro</string>
    <string name="action_settings">Configurações</string>
    <string name="action_webview">Versão Web</string>
    <string name="action_reset">Limpar Dados</string>
    <string name="action_changes">Últimas Mudanças</string>
    <string name="action_about">Sobre</string>
    <string name="action_att">Atualizações</string>
    <string name="text_connection_error">Não foi Possível Carregar a Página</string>
    <string name="text_connection_timeout">Tempo esgotado</string>
    <string name="text_connection_no">Sem Conexão com a Internet</string>
    <string name="text_empty">Não há nada aqui, volte mais tarde</string>
    <string name="text_empty_materiais">Não há materiais disponíveis</string>
    <string name="title_loading">Carregando</string>
    <string name="text_loading">Por favor, aguarde…</string>
    <string name="text_retry">Recarregar</string>
    <string name="text_offline">Offline</string>
    <string name="text_unavailable">Recurso indisponível nesta versão</string>
    <string name="text_user">Matrícula</string>
    <string name="text_password">Senha</string>
    <string name="text_invalid_login">Login Inválido</string>
    <string name="text_expired_login">Seu Login Expirou</string>
    <string name="text_loading_first_login">Carregando %1$s / %2$s</string>
    <string name="text_login_necessary">É necessário estar logado</string>
    <string name="button_login">Entrar</string>
    <string name="button_wifi">Ativar Wi-Fi</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="menu_materiais">Materiais de Aula</string>
    <string name="menu_calendario">Calendário</string>
    <string name="menu_documentos">Solicitar Documentos</string>
    <string name="menu_account">Minha Conta</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_password">Alterar Senha</string>
    <string name="menu_resources">Recursos</string>
    <string name="menu_communication">Comunicação</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_changes">Sugerir Mudanças</string>
    <string name="menu_settigs">Configurações</string>
    <string name="menu_bug">Reportar Bug</string>
    <string name="dialog_quit_yes">Sim</string>
    <string name="dialog_quit_no">Não</string>
    <string name="dialog_quit_title">Sair</string>
    <string name="dialog_quit_msg">Deseja mesmo sair?</string>
    <string name="dialog_date_change">Selecione um ano</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_close">Fechar</string>
    <string name="dialog_att_title">Atualizar</string>
    <string name="dialog_att_download">Download</string>
    <string name="dialog_att_msg">A sua versão atual é a %1$s. Caso o download seja da mesma versão cancele-o.</string>
    <string name="email_assunto_bug">Reporte de Bug</string>
    <string name="email_assunto_sug">Sugestão</string>
    <string name="email_content_bug">"Descreva o erro: "</string>
    <string name="email_content_sug">"O que você gostaria de sugerir? "</string>
    <string name="email_success">Obrigado pelo feedback!</string>
    <string name="email_error">O Email não pôde ser enviado.</string>
    <string name="email_empty">Poxa, pelo menos escreva algo…</string>
    <string name="email_sending">Enviando…</string>
    <string name="email_rate">Avalie o aplicativo!</string>
    <string name="email_page">Selecione as páginas que contém bug:</string>
    <string name="share_message">"Recomendo este app do QAcademico para IFsul "</string>
    <string name="share_choose">Selecione um</string>
    <string name="login_continue">Continuar como</string>
    <string name="day_monday">Segunda-Feira</string>
    <string name="day_tuesday">Terça-Feira</string>
    <string name="day_wednesday">Quarta-Feira</string>
    <string name="day_thursday">Quinta-Feira</string>
    <string name="day_friday">Sexta-Feira</string>
    <string name="text_no_connection">Sem conexão com a Internet</string>
    <string name="text_download_fail">Não foi possível iniciar o download</string>
    <string name="text_download_start">Iniciando Download…</string>
    <string name="boletim_TFaltas">TF</string>
    <string name="boletim_Nota">N</string>
    <string name="boletim_Materia">Materia</string>
    <string name="boletim_Faltas">F</string>
    <string name="boletim_RP">RP</string>
    <string name="boletim_Etapa">E</string>
    <string name="boletim_NotaFinal">NF</string>
    <string name="boletim_PrimeiraEtapa">1ª</string>
    <string name="boletim_SegundaEtapa">2ª</string>
    <string name="diarios_PrimeiraEtapa">Primeira Etapa</string>
    <string name="diarios_SegundaEtapa">Segunda Etapa</string>
    <string name="diarios_RP1_PrimeiraEtapa">Primeira Reavaliação da Primeira Etapa</string>
    <string name="diarios_RP1_SegundaEtapa">Primeira Reavaliação da Segunda Etapa</string>
    <string name="diarios_RP2_PrimeiraEtapa">Segunda Reavaliação da Primeira Etapa</string>
    <string name="diarios_RP2_SegundaEtapa">Segunda Reavaliação da Segunda Etapa</string>
    <string name="diarios_Peso">Peso:</string>
    <string name="diarios_Max">Nota Máxima:</string>
    <string name="diarios_Nota">Nota:</string>
    <string name="diarios_nothing">Nada Aqui</string>
    <string name="diarios_cobre">Peça a seu professor</string>
    <string name="home_welcome_message_dia">Bom dia</string>
    <string name="home_welcome_message_tarde">Boa tarde</string>
    <string name="home_welcome_message_noite">Boa noite</string>
    <string name="home_welcome_message">%1$s, %2$s!</string>
    <string name="home_description_welcome">Bem-vindo ao QAcadêmico Mobile.</string>
    <string name="home_description_message">Esta é a primeira versão do app, portanto espere por bugs.</string>
    <string name="home_diarios_description">Veja suas notas individuais de cada diarios</string>
    <string name="home_boletim_description">Veja suas notas finais de cada etapa</string>
    <string name="home_horario_description">Veja seus horários de aula</string>
    <string name="home_refresh_description">Deslize para baixo para atualizar</string>
    <string name="home_bugreport_description">Avise-nos sobre problemas no aplicativo</string>
    <string name="home_sug_description">Envie-nos sua opinião ou sugestão sobre o aplicativo</string>
    <string name="home_share_description">Compartilhe o aplicativo com seus amigos e colegas</string>
    <string name="home_materiais_description">Encontre materiais de aula</string>
    <string name="home_calendario_description">Veja o calendário de seu ano letivo</string>
    <string name="home_documentos_description">Solicite documentos</string>
    <string name="home_refresh">Atualizar</string>
    <string name="home_guide">Guia</string>
    <string name="home_guide_description">Você pode acessar os recursos abaixo através dos menus de navegação</string>
    <string name="home_hello">Olá!</string>
    <string name="fab_expand">Expandir/Recolher</string>
    <string name="action_date">Selecionar Data</string>
    <string name="action_column">Organizar Tabela</string>
    <string name="action_header">Travar/Liberar Cabeçalho</string>
    <string name="more_devs">Desenvolvido por:</string>
    <string name="more_free">Código Aberto</string>
    <string name="more_colab">Colabore com este projeto!</string>
    <string name="more_content">*O conteúdo utilizado não pertence aos criadores do app.</string>
    <string name="more_site" translatable="false">http://qacademico.ifsul.edu.br</string>
    <string name="more_copyright" translatable="false">© 2018 Qualidata</string>
    <string name="more_year">2018</string>
    <string name="more_emerson">Émerson Philippe Lopes</string>
    <string name="more_gustavo">Gustavo Hübner Rehbein</string>
    <string name="more_matheus">Matheus Martins Isquierdo</string>
    <string name="more_william">William Kolodziejski</string>
    <string name="download_description">Atualização QAcadêmico Mobile</string>
    <string name="passchange_old_pass">Senha Atual</string>
    <string name="passchange_new_pass">Nova Senha</string>
    <string name="passchange_new_pass_confirm">Confirme a Senha</string>
    <string name="passchange_txt_short">Senha muito curta</string>
    <string name="passchange_txt_empty">Preencha todos os campos</string>
    <string name="passchange_txt_different">As senhas não conferem</string>
    <string name="passchange_txt_equals">As senhas conferem</string>
    <string name="passchange_txt_old_equals">As senhas conferem, mas um campo obrigatório não</string>
    <string name="passchange_txt_warning">Isso irá alterar sua senha atual!</string>
    <string name="passchange_txt_obg">Campo obrigatório</string>
    <string name="passchange_txt_error_message">Não foi possível alterar a senha. Os dados preenchidos estão incorretos.</string>
    <string name="error_title">Erro</string>
    <string name="error_title_oops">Ops</string>
    <string name="passchange_txt_success_message">Sua senha foi alterada.</string>
    <string name="success_title">Sucesso</string>
    <string name="page_load_empty">Por favor, certifique-se de carregar a página selecionada antes de enviar.</string>
    <string name="message_expanded">Abas expandidas</string>
    <string name="message_collapsed">Abas recolhidas</string>
    <string name="pref_autoload_true">Carregar todas páginas automaticamente</string>
    <string name="changelog_list">
        <ul>
        <li>・ Correção de erro que causava carregamento infinito ao trocar o ano no Boletim.\n\n</li>
        <li>・ Correções de erros de carregamento ao abrir o aplicativo.\n\n</li>
		<li>・ Correções de travamentos ao abrir o aplicativo sem conexão com a internet.\n\n</li>
		<li>・ Correções de bug ao deslizar a tela com alguma aba expandida.\n\n</li>
		<li>・ Provável correção de erro que impedia o acesso em versões mais antigas do Android.\n\n</li>
		<li>・ Provável correção de erro que causava carregamento infinito ao abrir aplicativo em celulares com Android inferior ao 5.1.\n\n</li>
		<li>・ Provável correção de erro que mostrava os nomes das matérias incorretamente nos Diários (CAVG).\n\n</li>
		<li>・ Matérias do boletim agora são mostradas em ordem alfabética.\n\n</li>
		<li>・ Otimização no carregamento das páginas.\n\n</li>
		<li>・ Otimizações de interface.\n\n</li>
		<li>・ Adicionado botão para seleção de ano nas páginas Diários e Horários.\n\n</li>
		<li>・ Adicionado botão para expandir todas as abas nas páginas Diários, Boletim e Horários.\n\n</li>
		<li>・ Adicionadas datas ao título das páginas Diários, Boletim e Horários.\n\n</li>
		<li>・ Adicionado cores às páginas para melhor diferenciá-las.\n\n</li>
        <li>・ Adicionado auto scroll quando uma aba não cabe na tela.\n\n</li>
		<li>・ Adicionado função de trocar a senha.\n\n</li>
		<li>・ Mudança no layout geral.</li>
		</ul>
    </string>
</resources>